src/objects/Lost_Sale__c.object
<CustomObject>
    <fields>
        <fullName>Colore_ricercato__c</fullName>
        <label>Colore ricercato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <formula>Prodotto__r.Colore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lost Sales</relationshipLabel>
        <relationshipName>Lost_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Found_an_alternative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Found an alternative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_sale_reason__c</fullName>
        <label>Lost sale reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missing size</fullName>
                </value>
                <value>
                    <fullName>Missing color</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Material type</fullName>
                </value>
                <value>
                    <fullName>Looking for a specific product</fullName>
                </value>
                <value>
                    <fullName>Product available online only</fullName>
                </value>
                <value>
                    <fullName>Client cannot wait for the transfer</fullName>
                </value>
                <value>
                    <fullName>Looking for the new collection not yet in the store</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prodotto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prodotto</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Lost Sales</relationshipLabel>
        <relationshipName>Lost_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outerwear</fullName>
                </value>
                <value>
                    <fullName>Fur</fullName>
                </value>
                <value>
                    <fullName>Leather Jacket</fullName>
                </value>
                <value>
                    <fullName>Blazer</fullName>
                </value>
                <value>
                    <fullName>Knitwear</fullName>
                </value>
                <value>
                    <fullName>Dresses / Suits</fullName>
                </value>
                <value>
                    <fullName>T-shirt / Shirt</fullName>
                </value>
                <value>
                    <fullName>Skirt</fullName>
                </value>
                <value>
                    <fullName>Trousers</fullName>
                </value>
                <value>
                    <fullName>Travelwear</fullName>
                </value>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Shoes</fullName>
                </value>
                <value>
                    <fullName>Scarf</fullName>
                </value>
                <value>
                    <fullName>Other (specify in note)</fullName>
                </value>
                <value>
                    <fullName>Knitwear Basics Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Man</fullName>
                </value>
                <value>
                    <fullName>Woman</fullName>
                </value>
                <value>
                    <fullName>Boy</fullName>
                </value>
                <value>
                    <fullName>Girl</fullName>
                </value>
                <value>
                    <fullName>Lifestyle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Season__c</fullName>
        <description>picklist of the seasons of the product that the customer was looking for</description>
        <label>Product Season</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SS</fullName>
                </value>
                <value>
                    <fullName>FW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU_Prodotto__c</fullName>
        <formula>Prodotto__r.Item_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Prodotto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <formula>Prodotto__r.Taglia_DW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taglia_ricercata__c</fullName>
        <label>Taglia ricercata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lost Sale</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LS-{0000000}</displayFormat>
        <label>Lost Sale Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lost Sales</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Size_or_Colour_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(ISBLANK(  Taglia_ricercata__c ),(ISPICKVAL(Lost_sale_reason__c , &quot;Missing size&quot;))),
AND(ISBLANK( Colore_ricercato__c ),ISPICKVAL(Lost_sale_reason__c , &quot;Missing color&quot;)))</errorConditionFormula>
        <errorMessage>If &quot;Missing Size&quot; has been selected enter the Size, 
If &quot;Missing Color&quot; has been selected enter the Colour</errorMessage>
    </validationRules>
</CustomObject>